BG-3569: big refactoring